...
        alert.addAction(UIAlertAction(title: "OK", style: .default))
        present(alert, animated: true)
    }
    
    func showLogoutConfirmation() {
        let alert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )
        let confirmAction = UIAlertAction(title: "Да", style: .default) { _ in
            self.presenter?.didTapLogout()
        }
        let cancelAction = UIAlertAction(title: "Нет", style: .default, handler: nil)
        
        alert.addAction(confirmAction)
        alert.addAction(cancelAction)
...
